# devcontainers-rs

./: .vimspector.json  Cargo.toml  README.md
src/: devcontainer.rs  devcontainer_tests.rs  errors.rs  main.rs  mount_from_str.rs  mount_from_str_tests.rs  project.rs  project_tests.rs  settings.rs  settings_compose_model.rs  utils.rs
test_files/application/.devcontainer/: devcontainer.json
test_files/docker-compose/.devcontainer/: devcontainer.json  docker-compose.yml
test_files/image/.devcontainer/: devcontainer.json
test_files/invalid/.devcontainer/: devcontainer.json
test_files/nvim-qt/.devcontainer/: devcontainer.json  run-nvim.sh
test_files/post_create_command/.devcontainer/: devcontainer.json  install-nvim.sh
