[package]
name = "devcontainers-rs"
version = "0.1.0"
authors = ["Gustavo <gbritosampaio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
json5 = "0.2.8"
shiplift = { git = "https://github.com/softprops/shiplift.git", branch = "master" }
http = "0.2.1"
futures = "0.3.6"
log = "0.4.0"
env_logger = "0.8.1"
