[package]
name = "devcontainers-rs"
version = "0.1.0"
authors = ["Gustavo <gbritosampaio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tar = "0.4.30"
flate2 = { version = "0.2", features = ["tokio"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
rust-crypto = "0.2.36"
json5 = "0.2.8"
bollard = "0.8"
http = "0.2.1"
futures = "0.3.6"
log = "0.4.0"
env_logger = "0.8.1"
dirs = "3.0.1"
