[package]
name = "devcontainers-rs"
version = "0.1.0"
authors = ["Gustavo <gbritosampaio@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
tar = "0.4.38"
flate2 = { version = "1.0.25" }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
json5 = "0.4.1"
futures = "0.3.25"
log = "0.4.17"
env_logger = "0.10.0"
dirs = "4.0.0"
serde_yaml = "0.9.17"
bollard = "0.14.0"
thiserror = "1.0.38"
sha2 = "0.10.6"
hex = "0.4.3"
anyhow = "1.0.68"
